# Path-Planning-for-UAV-Interior-Structure-Scanning-in-Buildings

./: README.md
Slice_flatten/: CMakeLists.txt  instruction.txt  slice.cpp
Slice_flatten/KD_2000_dis15_15/: slice_0.pcd  slice_1.pcd  slice_10.pcd  slice_11.pcd  slice_12.pcd  slice_13.pcd  slice_14.pcd  slice_15.pcd  slice_16.pcd  slice_2.pcd  slice_3.pcd  slice_4.pcd  slice_5.pcd  slice_6.pcd  slice_7.pcd  slice_8.pcd  slice_9.pcd
Slice_flatten/KD_2000_dis1_1/: slice_0.pcd  slice_1.pcd  slice_10.pcd  slice_11.pcd  slice_12.pcd  slice_13.pcd  slice_14.pcd  slice_15.pcd  slice_2.pcd  slice_3.pcd  slice_4.pcd  slice_5.pcd  slice_6.pcd  slice_7.pcd  slice_8.pcd  slice_9.pcd
Slice_flatten/KD_2000_dis2_1/: slice_0.pcd  slice_1.pcd  slice_10.pcd  slice_11.pcd  slice_12.pcd  slice_13.pcd  slice_14.pcd  slice_15.pcd  slice_16.pcd  slice_2.pcd  slice_3.pcd  slice_4.pcd  slice_5.pcd  slice_6.pcd  slice_7.pcd  slice_8.pcd  slice_9.pcd
Slice_flatten/data/: optimal_positions_KD_test.pcd  optimal_positions_dis_25.pcd  result_Indoor_and_outdoor.pcd
Slice_flatten/dis_25_inside/: slice_0.pcd  slice_1.pcd  slice_10.pcd  slice_11.pcd  slice_12.pcd  slice_13.pcd  slice_14.pcd  slice_2.pcd  slice_3.pcd  slice_4.pcd  slice_5.pcd  slice_6.pcd  slice_7.pcd  slice_8.pcd  slice_9.pcd
Slice_flatten/new_inside/: slice_0.pcd  slice_1.pcd  slice_10.pcd  slice_11.pcd  slice_12.pcd  slice_13.pcd  slice_14.pcd  slice_15.pcd  slice_2.pcd  slice_3.pcd  slice_4.pcd  slice_5.pcd  slice_6.pcd  slice_7.pcd  slice_8.pcd  slice_9.pcd
Slice_flatten/new_outside/: slice_1.pcd  slice_10.pcd  slice_2.pcd  (+11 more)
(+61 files in other folders)
